Added GET and POST /patients
